--- a/.github/workflows/auto-approver.yml
+++ b/.github/workflows/auto-approver.yml
@@ -28,4 +28,4 @@ jobs:
                   fi
             - uses: hmarr/auto-approve-action@v3
               with:
-                  token: ${{ secrets.GITHUB_TOKEN }}
+                  github-token: ${{ secrets.GITHUB_TOKEN }}
