generalize so it works for more than just the feature-1 branch

--- a/.github/workflows/auto-approver.yml
+++ b/.github/workflows/auto-approver.yml
@@ -20,13 +20,10 @@ jobs:
                   fetch-depth: 0
             - name: Check if only contains commits in QA
               run: |
-                  echo "${{ github.head_ref }}"
-                  echo "${{ github.base_ref }}"
-                  echo "${{ github.ref_name }}"
-                  if git merge-base --is-ancestor origin/feature-1 origin/mule-qa; then
-                      echo -e "\033[32mfeature-1 only contains commits found in QA"
+                  if git merge-base --is-ancestor origin/${{ github.head_ref }} origin/mule-qa; then
+                      echo -e "\033[32m${{ github.head_ref }} only contains commits found in QA"
                   else
-                      echo -e "\033[31mfeature-1 contains commits not found in QA"
+                      echo -e "\033[31m${{ github.head_ref }} contains commits not found in QA"
                       exit 1;
                   fi
             - uses: hmarr/auto-approve-action@v3
