--- a/.github/workflows/auto-approver.yml
+++ b/.github/workflows/auto-approver.yml
@@ -15,4 +15,4 @@ jobs:
         steps:  
             - uses: rnordmanASU/conditionally-approve-pr-containing-only-trusted-commits@main
               with:
-                trusted-branches: 'mule-qa'
+                trusted-branches: 'fake-qa'
